Correção de bug no menu e mudança da cor de fundo do logo no menu mobile.

--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -218,6 +218,10 @@
         text-align: center;
     }
     
+    #main-menu ul li:first-child {
+        background-color: #0f143e;    
+    }
+    
     #main-menu ul li img {
         margin-top: 10px;
     }
