--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -101,10 +101,12 @@
     z-index: 1000;
     top: 50%;
     left: 50%;
+    margin-left: -100px;
+    margin-top: -100px;
 }
 
 #hero {
-    background: #ffffff url('../img/hero_banner_background.png') no-repeat top center;
+    background: #012b3b url('../img/hero_banner_background.png') no-repeat top center;
 }
 
 #hero #header {
